syntax = "proto3";

package scores;

service Scores {
    rpc GetAggregatedCategoryScores(TimeRangeRequest) returns (stream AggregateCategorydScoresResponse);
    rpc GetScoresByTicket(TimeRangeRequest) returns (stream ScoresByTicketResponse);
    rpc GetOverallQualityScore(TimeRangeRequest) returns (OverallQualityScoreResponse);
    rpc GetPeriodOverPeriodChange(PeriodComparisonRequest) returns (PeriodChangeResponse);  
}

message TimeRangeRequest {
    string startDate = 1;
    string endDate = 2;
}

message AggregateCategorydScoresResponse {
    message CategoryScoreByDate {
        string timeRange = 1;
        double score = 2;
    }

    int32 id = 1;
    string name = 2;
    int32 ratings = 3;
    double score = 4;
    repeated CategoryScoreByDate categoryScoreByDate = 5;
}

message ScoresByTicketResponse {
    message CategoryScore {
        string name = 1;
        double score = 2;
      }

      int32 ticketId = 1;
      repeated CategoryScore categoryScores = 2;    
}

message OverallQualityScoreResponse {
    double overallScore = 1;
}

message PeriodComparisonRequest {
    TimeRangeRequest selectedPeriod = 1;
    TimeRangeRequest previousPeriod = 2;
}

message PeriodChangeResponse {
    double scoreChange = 1;
  }
  
